[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Levels/Bomb.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Area2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Bullet.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.32755, -1.03252, 0, 0, 0, 0, 320.205, -0.491085 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Next_Scene = "res://TitleScreen/MainMenu.tscn"
Bomb = ExtResource( 2 )
Bullet = ExtResource( 5 )

[node name="SpawnBulletTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnBombTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Area2D" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="Area2D" instance=ExtResource( 3 )]

[node name="BulletPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BulletPathFollower" type="PathFollow2D" parent="BulletPath"]
position = Vector2( -1.32755, -1.03252 )
rotation = 0.00168391
[connection signal="timeout" from="SpawnBulletTimer" to="." method="_on_SpawnBulletTimer_timeout"]
[connection signal="timeout" from="SpawnBombTimer" to="." method="_on_SpawnBombTimer_timeout"]
